adding search image page

--- a/image_search.html
+++ b/image_search.html
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse ml-auto mr-1 flex-grow-0">
                 <ul class="navbar-nav text-right">
                     <li class="nav-item">
-                        <a class="nav-link" href="image_search.html">Image Search</a>
+                        <a class="nav-link" href="index.html">Google Search</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Advance Search</a>
@@ -28,9 +28,10 @@
                 <form class="justify-content-center" action="https://google.com/search">
                     <div class="form-group">
                         <label class="sr-only">Search Google</label>
+                        <input type="hidden" class="form-control" name="tbm" value="isch">
                         <input type="text" class="form-control" name="q">
                     </div>
-                    <button type="submit" class="btn btn-light btn-lg">Google Search</button>
+                    <button type="submit" class="btn btn-light btn-lg">Image Search</button>
                 </form>
             </div>
         </div>
