adding advance search

--- a/image_search.html
+++ b/image_search.html
@@ -18,7 +18,7 @@
                         <a class="nav-link" href="index.html">Google Search</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Advance Search</a>
+                        <a class="nav-link" href="advance_search.html">Advance Search</a>
                     </li>
                 </ul>
             </div>
