--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <a class="nav-link" href="image_search.html">Image Search</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Advance Search</a>
+                        <a class="nav-link" href="advance_search.html">Advance Search</a>
                     </li>
                 </ul>
             </div>
@@ -27,10 +27,9 @@
             <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center p-5">
                 <form class="justify-content-center" action="https://google.com/search">
                     <div class="form-group">
-                        <label class="sr-only">Search Google</label>
                         <input type="text" class="form-control" name="q">
                     </div>
-                    <button type="submit" class="btn btn-light btn-lg">Google Search</button>
+                    <input type="submit" class="btn btn-light btn-lg" value="Google Search">
                 </form>
             </div>
         </div>
