--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">Image Search</a></li>
-            <li><a href="#">Advance Search</a></li>
+            <li><a href="image_search.html">Image Search</a></li>
+            <li><a href="advance_search.html">Advance Search</a></li>
         </ul>
     </nav>
     <div class="content">
@@ -109,7 +109,7 @@
             <input class="bar" type="text" name="q">
             <br>
             <input class="button" type="submit" value="Google Search">
-            <input class="button" type="submit" value="I'm Feeling Lucky">
+            <input class="button" type="submit" name="btnI" value="I'm Feeling Lucky!">
         </form>
     </div>
 </body>
