fix for google images logo

--- a/image_search.html
+++ b/image_search.html
@@ -17,6 +17,7 @@
     </nav>
     <div class="content">
         <img class="banner" src="img/googlelogo_banner.png">
+        <div class="banner-img">images</div>
         <form action="https://google.com/search">
             <input type="hidden" name="tbm" value="isch">
             <input class="bar" type="text" name="q">
