fix for google images logo

--- a/image_search.html
+++ b/image_search.html
@@ -16,8 +16,10 @@
         </ul>
     </nav>
     <div class="content">
-        <img class="banner" src="img/googlelogo_banner.png">
-        <div class="banner-img">images</div>
+        <div class="container">
+            <img class="banner" src="img/googlelogo_banner.png">
+            <div class="banner-img">images</div>
+        </div>
         <form action="https://google.com/search">
             <input type="hidden" name="tbm" value="isch">
             <input class="bar" type="text" name="q">
