--- a/image_search.html
+++ b/image_search.html
@@ -4,6 +4,16 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="main.css" media="screen" />
+    
+    <style>
+        .banner {
+            margin-bottom: 0;
+        }
+        
+        .bar {
+            width: 474px;
+        }
+    </style>
 
     <title>Search</title>
 </head>
