--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <nav>
         <ul>
-            <li><a href="image_search.html">Image Search</a></li>
             <li><a href="advance_search.html">Advance Search</a></li>
+            <li><a href="image_search.html">Image Search</a></li>
         </ul>
     </nav>
     <div class="content">
@@ -21,7 +21,7 @@
             <input class="bar" type="text" name="q">
             <br>
             <input class="button" type="submit" value="Google Search">
-            <input class="button" type="submit" name="btnI" value="I'm Feeling Lucky!">
+            <input class="button" type="submit" name="btnI" value="I'm Feeling Lucky">
         </form>
     </div>
 </body>
