--- a/advance_search.html
+++ b/advance_search.html
@@ -21,8 +21,7 @@
 <body>
     <nav class="advance">
         <ul>
-            <li><a href="advance_search.html">Advance Search</a></li>
-            <li><a href="image_search.html">Image Search</a></li>
+            <li><a href="index.html">Google Search</a></li>
         </ul>
     </nav>
     <div class="content">
