added search button on image search page

--- a/image_search.html
+++ b/image_search.html
@@ -32,6 +32,8 @@
         <form action="https://google.com/search">
             <input type="hidden" name="tbm" value="isch">
             <input class="bar" type="text" name="q">
+            <br>
+            <input class="button" type="submit" value="Search Image">
         </form>
     </div>
 </body>
