added 'what to do in search box' column

--- a/advance_search.html
+++ b/advance_search.html
@@ -31,23 +31,31 @@
         <hr>
         <div class="container">
             <form action="https://google.com/search">
-            <div class="header2">Find pages with...</div>
             <table>
+                <tr>
+                    <td class="header2">Find pages with...</td>
+                    <td class="column2"></td>
+                    <td class="header3">To do this in the search box.</td>
+                </tr>
                 <tr>
                     <td class="column1">all these words:</td>
                     <td class="column2"><input class="adv-form" name="as_q" type="text"></td>
+                    <td class="column3">Type the important words: <code>tri-colour rat terrier</code></td>
                 </tr>
                 <tr>
                     <td class="column1">this exact word or phrase:</td>
                     <td class="column2"><input class="adv-form" name="as_epq" type="text"></td>
+                    <td class="column3">Put exact words in quotes: <code>"rat terrier"</code></td>
                 </tr>
                 <tr>
                     <td class="column1">any of these words:</td>
                     <td class="column2"><input class="adv-form" name="as_oq" type="text"></td>
+                    <td class="column3">Type OR between all the words you want: <code>miniature OR standard</code></td>
                 </tr>
                 <tr>
                     <td class="column1">none of these words:</td>
                     <td class="column2"><input class="adv-form" name="as_eq" type="text"></td>
+                    <td class="column3">Put a minus sign just before words that you don't want:<br> <code>-rodent, -"Jack Russell"</code></td>
                 </tr>
                 <tr>
                     <td class="column1"></td>
