adding google logo in advance search

--- a/advance_search.html
+++ b/advance_search.html
@@ -20,6 +20,7 @@
 
 <body>
     <nav class="advance">
+        <img class="logo" src="img/googlelogo.png">
         <ul>
             <li><a href="index.html">Google Search</a></li>
         </ul>
